# python-flask-example

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example.py  pyproject.toml  run.sh  setup.cfg  user_repository.py  users.json
.github/workflows/: python-ci.yml
templates/: home.html
templates/courses/: index.html  layout.html
templates/users/: edit.html  index.html  layout.html  new.html  show.html
